<resources>
    <string name="app_name">DeepLife</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="err_msg_name">Enter your full name here</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_email_phone">Enter a valid email address or phone number</string>
    <string name="err_msg_password1">Enter the password</string>
    <string name="err_msg_password2">The Passwords You Entered Do Not Match</string>
    <string name="err_msg_phone">Enter a valid phone number</string>
    <string name="err_msg_testimony_title">Enter testimony title</string>
    <string name="err_msg_testimony_detail">Enter testimony detail</string>
    <string name="home_fragment_title">Home</string>
    <string name="disciples_fragment_title">Disciples</string>
    <string name="testimony_fragment_title">Testimony</string>
    <string name="news_fragment_title">News</string>
    <string name="learning_fragment_title">Learning</string>
    <string name="share_fragment_title">Share</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="msg_authenticating_account">Authenticating the Account ...</string>
    <string name="thank_you">Thank You!</string>
    <string name="dlg_msg_invalid_user_acct">Invalid user account! Use a valid account please</string>
    <string name="dlg_msg_something_wrong_error">Something went wrong! Please try again!\nError: %1$s</string>
    <string name="dlg_msg_authentication_failed">Authentication has failed! Please try again.</string>
    <string name="dlg_msg_downloading_files">Downloading Files ...</string>
    <string name="dlg_msg_authenticating_user">Authenticating the user ...</string>
    <string name="toast_msg_login_successful">Login Successful</string>
    <string name="dlg_msg_login_failure">Unable to login! Please try again.</string>
    <string name="dlg_msg_login">Please enter your Phone or Email and Password to login</string>
    <string name="dlg_msg_meta_download_failed">Unable to download all the necessary files! Please try again!</string>
    <string name="toolbar_title_disciple_add">Add Disciple</string>
    <string name="dlg_msg_disciple_add_success">Disciple Successfully Added!</string>
    <string name="dlg_msg_disciple_add_failure">Oops! Disciple could not be added!</string>
    <string name="dlg_msg_disciple_add_failure_check">Oops! Disciple could not be added! Please make sure you have entered the correct information.</string>
    <string name="dlg_msg_are_you_sure_delete_x">Are you sure you want to delete this %1$s?!</string>
    <string name="dlg_btn_no_dont_delete">No, don\'t delete!</string>
    <string name="dlg_btn_yes">Yes</string>
    <string name="toolbar_title_disciple_wbs">Win Build Send Disciple</string>
    <string name="text_win">Win</string>
    <string name="text_build">Build</string>
    <string name="text_send">Send</string>
    <string name="ui_disciple_tree">Disciple Tree</string>
    <string name="ui_total_disciples">Total Disciples</string>
    <string name="form_text_full_name">Full Name</string>
    <string name="form_text_gender">Gender</string>
    <string name="form_text_email">Email</string>
    <string name="form_text_country">Country</string>
    <string name="form_text_phone">Phone</string>
    <string name="form_text_phone_number">Phone Number</string>
    <string name="text_wbs">Win | Build | Send</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="action_call_now">Call Now</string>
    <string name="text_notes">Notes</string>
    <string name="action_add_disciple">Add Disciple</string>
    <string name="text_disciples">Disciples</string>
    <string name="form_text_email_or_phone_number">Email or Phone Number</string>
    <string name="form_text_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="form_text_not_registered_yet">Not Registered Yet?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="form_text_personal_information">Personal Information</string>
    <string name="action_edit">Edit</string>
    <string name="form_text_confirm_password">Confirm Password</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_deeplife_description">DeepLife is a data-driven web and mobile application which enables you to create your disciples and help keep you accountable in disciplining them. See a multiplying disciple generational tree of your ministry!</string>
    <string name="text_pray_meet_call">Pray | Meet | Call</string>
    <string name="text_step2_msg">Lets make desciples, its our calling. Add your new disciples with their full information.</string>
    <string name="text_step2_verse">go and make disciples of all nations\nMatthew 28:19</string>
    <string name="form_text_share_your_testimony">Share your Testimony</string>
    <string name="form_text_write_your_testimony">Write your Testimony</string>
    <string name="action_add_testimony">Add Testimony</string>
    <string name="text_star_mandatory">*Mandatory</string>
    <string name="action_read_note">Read Note</string>
    <string name="menu_home">Home</string>
    <string name="menu_testimony">Testimony</string>
    <string name="menu_newsfeed">NewsFeed</string>
    <string name="menu_disciples">Disciples</string>
    <string name="menu_schedules">Schedules</string>
    <string name="menu_share">Share</string>
    <string name="menu_learning_tools">Learning Tools</string>
    <string name="menusub_my_account">My Account</string>
    <string name="menusub_communicate">Communicate</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_about">About</string>
    <string name="toolbar_title_disciple_edit">Edit Disciple</string>
    <string name="toolbar_title_testimony_add">Add New Testimony</string>
    <string name="welcome_next">Next</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_start">Start</string>
    <string name="welcome_intro2">DeepLife is a web based system which enables you to create your disciples and make accountable in discipling them. To see multiplying tree of generation in your ministry</string>
    <string name="welcome_intro3_title">Pray | Meet | Call</string>
    <string name="welcome_intro3_verse">go and make disciples of all nation \n mathew 28:19</string>
    <string name="welcome_intro3">Lets make disciple, its our calling. \nAdd your new disciples with their full information</string>
    <string name="welcome_intro4">Start Discipling Now</string>
    <string name="full_screen">Full Screen</string>
    <string name="goto_home">Go Back</string>
    <string name="learning_category">Learning Category</string>
</resources>
