<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_icon_grey"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_testimony"
            android:icon="@drawable/nav_testimonials_icon_grey"
            android:title="@string/menu_testimony" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/icon_nav_man"
            android:title="@string/menu_newsfeed" />

        <item
            android:id="@+id/nav_disciples"
            android:icon="@drawable/icon_nav_man"
            android:title="@string/menu_disciples" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/icon_nav_schedule"
            android:title="@string/menu_schedules" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/icon_nav_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/icon_nav_learn"
            android:title="@string/menu_learning_tools" />
    </group>



    <item android:title="@string/menusub_my_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/icon_nav_social"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

    <item android:title="@string/menusub_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/icon_nav_facebook"
                android:title="@string/menu_facebook" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
