<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/splashlogo_xhdpi"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome_intro3_title"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/welcome_intro3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/welcome_intro3_verse"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>