<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:paddingBottom="5dp"
                android:src="@drawable/deeplifelogo_small3x" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_signup_fullname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_text_full_name"
                        android:inputType="text"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_signup_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_text_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:paddingLeft="4dp"
                        android:textColor="@color/input_register_bg"
                        android:textColorHint="@color/colorAccent"
                        android:text="Country" />
                    <Spinner
                        android:id="@+id/spn_signup_country"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_txtinput_phonecode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/txt_signup_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:focusable="false"
                            android:inputType="phone"
                            android:textColor="@color/white"
                            android:textColorHint="@color/colorAccent"
                            tools:text="+123" />
                        </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signup_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txt_signup_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/form_text_phone"
                            android:inputType="phone"
                            android:textColor="@color/white" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_signup_password1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_text_password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_signup_password2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_text_confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/input_register_bg"
                        android:text="@string/form_text_gender" />
                    <Spinner
                        android:id="@+id/spn_signup_gender"
                        android:layout_width="match_parent"
                        android:entries="@array/gender"
                        android:layout_height="match_parent"></Spinner>
                </LinearLayout>


                <Button
                    android:id="@+id/btn_signup_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/btn_login_bg"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/btn_login" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>